[tool.poetry]
name = "tiempo_tracker"
version = "0.1.0"
description = ""
authors = ["Dmitrii Khramtsov <dmitrypkh@gmail.com>"]
license = "MIT"

packages = [{ include = "time_tracker" }]
classifiers = [
  'Environment :: Console'
]

[tool.poetry.scripts]
trt = "time_tracker.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.41"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
Faker = "^14.2.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
